--- a/src/components/Pokedex/Pokedex.css
+++ b/src/components/Pokedex/Pokedex.css
@@ -1,5 +1,8 @@
 .title{
-    font-size: 36px;
+    margin: 15px;
+    font-size: 42px;
+    font-family: cinzel, serif;
+    font-weight: 600;
     letter-spacing: 3px;
 }
 
