--- a/src/components/Pokemon/Pokemon.css
+++ b/src/components/Pokemon/Pokemon.css
@@ -9,7 +9,7 @@
     gap: 10px;
 }
 .pokemon:hover{
-    background-color: wheat;
+    background-color: var(--primary);
     border-radius: 8px;
     cursor: pointer;
 }
