--- a/src/components/PokemonDetails/PokemonDetail.css
+++ b/src/components/PokemonDetails/PokemonDetail.css
@@ -1,11 +1,12 @@
 
 
 .outer{
+    width: 80%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 15px;
+    margin: 15px auto;
     padding: 30px 20px;
     border: 1px solid black;
     border-radius: 10px;
@@ -41,6 +42,15 @@
     gap: 20px;
 }
 
+li{
+    margin: 3px;
+    list-style: none;
+    background-color: rgb(179, 179, 179);
+    text-align: center;
+    border-radius: 5px;
+    padding: 2px 5px;
+}
+
 .name{
     font-size: 80px;
     font-family: 'Times New Roman', Times, serif;
@@ -49,6 +59,7 @@
 }
 
 .bottom{
+    padding: 0px 30px;
     display: flex;
     align-items: center;
     justify-content: center;
